refactor: move frontend to nextjs framework
NextJs is planned for usage in the frontend to allow for easier
implementation of website functionality and to prevent potential future
issues that may occur as a result of using vanilla JavaScript such as
XSS attacks depending on how the tables are generated.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Prevent devcontainer secrets from being leaked
 .devcontainer/**/POSTGRES_PASSWORD
 .devcontainer/**/sqitch.conf
+
+.pnpm-store
+node_modules
